# raspi-cognitive-adas

./: .gitignore  ARCHITECTURE_VIEWER.html  README.md  architecture_issues_v2.2.txt
claude_engineering_growth_skill/: FUTURE_IMPROVEMENTS.md  SKILL.md  TRIGGER_CONDITIONS.md
debug_reports/: 2026-06-05_gil_investigation.md  2026-06-06_session_report.md  2026-06-07_session_report.md  2026-06-09_session_report.md  2026-06-10_session_report.md  2026-06-14_session_report.md  2026-06-15_session_report.md  2026-06-17_session_report.md  2026-06-20_session_report.md  2026-06-24_session_report.md  2026-06-25_session_report.md  2026-06-26_session_report.md  ARCHITECTURE.md  BRAIN3_FACE_MODELS_SHORTLIST.md  FP32_SPEED_ENVELOPE.md  GIT_CHEATSHEET.md  INT8_AB_RESULTS.md  INT8_DETECTOR_QUANTIZATION_PLAYBOOK.md  MULTIMODEL_CORE_BUDGET.md  PROJECT_STATUS.md  REPORT_WORKFLOW.md  results.txt
demo/: log.txt
version_1.1_initial_onnx/raspi_project/: CMakeLists.txt
version_1.1_initial_onnx/raspi_project/src/: main.cpp
version_1.1_initial_onnx/raspi_project/src/camera/: Camera.h  Picamera2Camera.cpp  Picamera2Camera.h
version_1.1_initial_onnx/raspi_project/src/inference/: OnnxModel.cpp  OnnxModel.h  YoloDetector.cpp  YoloDetector.h
version_1.1_initial_onnx/raspi_project/src/utils/: Timer.h  Types.h
version_1.1_initial_onnx/raspi_project/src/vision/: Draw.cpp  Draw.h  Letterbox.cpp  Letterbox.h  Nms.cpp  Nms.h
version_1.6_rgb_bgr_fix/raspi_project_v6/src/: main.cpp
version_2.2_cognitive_architecture/: CMakeLists.txt
version_2.2_cognitive_architecture/src/: main.cpp
version_2.2_cognitive_architecture/src/audio/: MomentaryAudioMap.h  NotificationManager.h  SpeedAudioMap.cpp  SpeedAudioMap.h
version_2.2_cognitive_architecture/src/camera/: Picamera2Camera.h
version_2.2_cognitive_architecture/src/decision/: AnnouncementPolicy.cpp  AnnouncementPolicy.h  CurrentSpeedLimitManager.cpp  CurrentSpeedLimitManager.h  MomentaryPolicy.h  NotificationArbiter.cpp  NotificationArbiter.h  SignEpisodeLifecycle.cpp  SignEpisodeLifecycle.h  SpeedSignLifecycle.cpp  SpeedSignLifecycle.h
version_2.2_cognitive_architecture/src/inference/: SpeedSignClassifier.h  YoloDetector.cpp  YoloDetector.h
version_2.2_cognitive_architecture/src/utils/: Timer.h  Types.h
version_2.2_cognitive_architecture/src/vision/: Letterbox.h
version_2.2_cognitive_architecture/tests/: AnnouncementPolicy_test.cpp  BehaviorPolicyRouter_test.cpp  CurrentSpeedLimitManager_test.cpp  MomentaryAudioMap_test.cpp  MomentaryEngine_test.cpp  NotificationArbiter_test.cpp  SignEpisodeLifecycle_test.cpp  SpeedAudioMap_test.cpp  test_audio.cpp
(+65 files in other folders)
